<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/alma_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:maxWidth="600dp"
        android:text="@string/app_network_description"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:maxWidth="600dp"
        android:text="@string/app_network_description2"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="italic|bold" />

    <RelativeLayout
        android:id="@+id/Ethernet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/selected_item"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/ethernet"
            android:textColor="@color/accent"
            android:textSize="20sp" />

        <com.rey.material.widget.CheckBox
            android:id="@+id/EthernetRadio"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:checked="true"
            app:cbd_strokeColor="@color/checkbox"
            app:cbd_tickColor="@color/accent" />

    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/separator" />

    <RelativeLayout
        android:id="@+id/Wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/wifi"
            android:textColor="@color/accent"
            android:textSize="20sp" />

        <com.rey.material.widget.CheckBox
            android:id="@+id/WiFiRadio"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            app:cbd_strokeColor="@android:color/white"
            app:cbd_tickColor="@color/accent" />

    </RelativeLayout>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <com.rey.material.widget.SnackBar
            android:id="@+id/step2_snackbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>
