<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/alma_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:maxWidth="600dp"
        android:text="@string/app_network_description"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/ethernet"
            android:textColor="@color/accent"
            android:textSize="20sp" />

        <com.rey.material.widget.Spinner
            style="@style/Material.Widget.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/accent"
            android:textSize="20sp"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"
            app:spn_arrowColor="@android:color/white"
            app:spn_dividerHeight="0dp" />
    </RelativeLayout>
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#fff" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/ethernet"
            android:textColor="@color/accent"
            android:textSize="20sp" />

        <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:inputType="textPassword"
            app:et_inputId="@+id/textfield_et_label_input"
            app:et_labelEnable="false"
            app:et_supportMode="none"
            app:et_dividerHeight="0dp"/>
        <!--
        android:hint="Input with helper"
            app:et_helper="Enter password"-->
    </RelativeLayout>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#fff" />

</LinearLayout>
